[gd_scene load_steps=3 format=3 uid="uid://cmdrvi7sks0ta"]

[ext_resource type="Script" path="res://scripts/games/lights_out_game.gd" id="1_1ywts"]
[ext_resource type="PackedScene" uid="uid://chvmjg662vc5e" path="res://scenes/structures/pressure_plate_lights_out.tscn" id="4_jqnww"]

[node name="LightsOutGame" type="Node2D"]
position = Vector2(8, 8)
script = ExtResource("1_1ywts")

[node name="0" parent="." instance=ExtResource("4_jqnww")]

[node name="1" parent="." instance=ExtResource("4_jqnww")]
position = Vector2(40, 0)

[node name="2" parent="." instance=ExtResource("4_jqnww")]
position = Vector2(80, 0)

[node name="3" parent="." instance=ExtResource("4_jqnww")]
position = Vector2(0, 40)

[node name="4" parent="." instance=ExtResource("4_jqnww")]
position = Vector2(40, 40)

[node name="5" parent="." instance=ExtResource("4_jqnww")]
position = Vector2(80, 40)

[node name="6" parent="." instance=ExtResource("4_jqnww")]
position = Vector2(0, 80)

[node name="7" parent="." instance=ExtResource("4_jqnww")]
position = Vector2(40, 80)

[node name="8" parent="." instance=ExtResource("4_jqnww")]
position = Vector2(80, 80)

[connection signal="change_mode" from="0" to="." method="_on__change_mode0"]
[connection signal="change_mode" from="1" to="." method="_on__change_mode1"]
[connection signal="change_mode" from="2" to="." method="_on__change_mode2"]
[connection signal="change_mode" from="3" to="." method="_on__change_mode3"]
[connection signal="change_mode" from="4" to="." method="_on__change_mode4"]
[connection signal="change_mode" from="5" to="." method="_on__change_mode5"]
[connection signal="change_mode" from="6" to="." method="_on__change_mode6"]
[connection signal="change_mode" from="7" to="." method="_on__change_mode7"]
[connection signal="change_mode" from="8" to="." method="_on__change_mode8"]
